Bug 258452 - Konqueror crash when trying to view some web pages [deref, QString, KJavaAppletViewerFactory::create, ..., KHTMLPart::createPart]
Summary: Konqueror crash when trying to view some web pages [deref, QString, KJavaAppl...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 258322 258832 258847 263264 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-01 00:57 UTC by Marek Paśnikowski
Modified: 2011-01-19 00:51 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.38 KB, text/plain)
2010-12-06 10:01 UTC, Joachim Mairböck
Details
New crash information added by DrKonqi (8.19 KB, text/plain)
2011-01-09 00:14 UTC, Kevin Range
Details
New crash information added by DrKonqi (11.50 KB, text/plain)
2011-01-15 12:18 UTC, Leo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Paśnikowski 2010-12-01 00:57:15 UTC
Application: konqueror (4.5.80 (4.6 Beta1))
KDE Platform Version: 4.5.80 (4.6 Beta1)
Qt Version: 4.7.0
Operating System: Linux 2.6.36-CHAKRA i686
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

I was trying to view some websites, like http://niebezpiecznik.pl/post/powazny-blad-w-gadu-gadu-i-gadu-air/

The program crashed while finishing the loading.

Using Arch-based Chakra Linux

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb5766710 (LWP 6220))]

Thread 2 (Thread 0xa6e36b70 (LWP 6844)):
#0  0xb7707424 in __kernel_vsyscall ()
#1  0xb6cc37a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d36f51 in QWaitConditionPrivate::wait (this=0x980bf8c, mutex=0x980bf88, time=30000) at thread/qwaitcondition_unix.cpp:86
#3  QWaitCondition::wait (this=0x980bf8c, mutex=0x980bf88, time=30000) at thread/qwaitcondition_unix.cpp:160
#4  0xb6d2abc1 in QThreadPoolThread::run (this=0xa20daa8) at concurrent/qthreadpool.cpp:140
#5  0xb6d367c1 in QThreadPrivate::start (arg=0xa20daa8) at thread/qthread_unix.cpp:266
#6  0xb6cbee60 in start_thread () from /lib/libpthread.so.0
#7  0xb6011fbe in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5766710 (LWP 6220)):
[KCrash Handler]
#7  QBasicAtomicInt::deref (this=0xa5c3914, other=@0xbfd64a5c) at ../../include/QtCore/../../src/corelib/arch/qatomic_i386.h:132
#8  QString::operator= (this=0xa5c3914, other=@0xbfd64a5c) at tools/qstring.cpp:1324
#9  0xabafb423 in std::transform<QList<QVariant>::const_iterator, QList<QString>::iterator, QString (*)(QVariant const&)> (__first=..., __last=..., __result=..., 
    __unary_op=0xabaf08e0 <variant2StringHelper(QVariant const&)>) at /usr/lib/gcc/i686-pc-linux-gnu/4.5.1/../../../../include/c++/4.5.1/bits/stl_algo.h:4688
#10 0xabaf709b in KJavaAppletViewerFactory::create (this=0xb2fd520, wparent=0x9b13530, parent=0xafa8d98, args=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/java/kjavaappletviewer.cpp:73
#11 0xae21dbca in KPluginFactory::create<KParts::ReadOnlyPart> (this=0xafa8d98, parentWidget=0x9b13530, parent=0xafa8d98, mimetype=..., serviceName=..., serviceTypes=..., params=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kdecore/util/kpluginfactory.h:527
#12 KHTMLPart::createPart (this=0xafa8d98, parentWidget=0x9b13530, parent=0xafa8d98, mimetype=..., serviceName=..., serviceTypes=..., params=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/khtml_part.cpp:4625
#13 0xae216aca in KHTMLPart::processObjectRequest (this=0xafa8d98, child=0xae5aba0, _url=..., mimetype=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/khtml_part.cpp:4388
#14 0xae217ed5 in KHTMLPart::requestObject (this=0xafa8d98, child=0xae5aba0, url=..., _args=..., browserArgs=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/khtml_part.cpp:4277
#15 0xae219011 in KHTMLPart::loadObjectElement (this=0xafa8d98, frame=0xa3bf2c8, url=..., serviceType=..., params=...)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/khtml_part.cpp:4198
#16 0xae312157 in DOM::HTMLObjectBaseElementImpl::computeContent (this=0xa3bf2c8) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/html_objectimpl.cpp:538
#17 0xae313295 in DOM::HTMLAppletElementImpl::computeContent (this=0xa3bf2c8) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/html_objectimpl.cpp:677
#18 0xae30cde7 in DOM::HTMLPartContainerElementImpl::computeContentIfNeeded (this=0xa3bf2c8) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/html_objectimpl.cpp:89
#19 DOM::HTMLPartContainerElementImpl::close (this=0xa3bf2c8) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/html_objectimpl.cpp:80
#20 0xae2ca122 in khtml::KHTMLParser::popOneBlock (this=0xb49c9f8, delBlock=true) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmlparser.cpp:1865
#21 0xae2cb16e in khtml::KHTMLParser::popBlock (this=0xb49c9f8, _id=5) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmlparser.cpp:1806
#22 0xae2cdf6c in khtml::KHTMLParser::parseToken (this=0xb49c9f8, t=0x9ec04b4) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmlparser.cpp:253
#23 0xae2cec73 in khtml::HTMLTokenizer::processToken (this=0x9ec04a0) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmltokenizer.cpp:2040
#24 0xae2d42a6 in khtml::HTMLTokenizer::parseTag (this=0x9ec04a0, src=...) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmltokenizer.cpp:1501
#25 0xae2d7456 in khtml::HTMLTokenizer::write (this=0x9ec04a0, str=..., appendData=false) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmltokenizer.cpp:1798
#26 0xae2d8eee in khtml::HTMLTokenizer::notifyFinished (this=0x9ec04a0, finishedObj=0xac66008) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/html/htmltokenizer.cpp:2136
#27 0xae3fcaa5 in khtml::CachedScript::checkNotify (this=0xac66008) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/misc/loader.cpp:397
#28 0xae3fcc94 in khtml::CachedScript::data (this=0xac66008, buffer=..., eof=true) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/misc/loader.cpp:389
#29 0xae3fcfcf in khtml::Loader::slotFinished (this=0x9391140, job=0xb972838) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/khtml/misc/loader.cpp:1262
#30 0xae3fd4af in khtml::Loader::qt_metacall (this=0x9391140, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfd65888)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/build/khtml/loader.moc:141
#31 0xb6e4455c in QMetaObject::metacall (object=0x9391140, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0xbfd65888) at kernel/qmetaobject.cpp:237
#32 0xb6e553d7 in QMetaObject::activate (sender=0xb972838, m=0xb71fbf48, local_signal_index=3, argv=0xbfd65888) at kernel/qobject.cpp:3280
#33 0xb70a5ae3 in KJob::result (this=0xb972838, _t1=0xb972838) at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kdecore/kjob.moc:194
#34 0xb70a5b38 in KJob::emitResult (this=0xb972838) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kdecore/jobs/kjob.cpp:312
#35 0xb53d6775 in KIO::SimpleJob::slotFinished (this=0xb972838) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/job.cpp:525
#36 0xb53dc806 in KIO::TransferJob::slotFinished (this=0xb972838) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/job.cpp:1118
#37 0xb53e0343 in KIO::TransferJob::qt_metacall (this=0xb972838, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfd65b5c)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kio/jobclasses.moc:367
#38 0xb6e4455c in QMetaObject::metacall (object=0xb972838, cl=QMetaObject::InvokeMetaMethod, idx=47, argv=0xbfd65b5c) at kernel/qmetaobject.cpp:237
#39 0xb6e553d7 in QMetaObject::activate (sender=0xb28d208, m=0xb555c384, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3280
#40 0xb54881c7 in KIO::SlaveInterface::finished (this=0xb28d208) at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kio/slaveinterface.moc:171
#41 0xb548b0bf in KIO::SlaveInterface::dispatch (this=0xb28d208, _cmd=104, rawdata=...) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/slaveinterface.cpp:173
#42 0xb5487a73 in KIO::SlaveInterface::dispatch (this=0xb28d208) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/slaveinterface.cpp:89
#43 0xb5479fb8 in KIO::Slave::gotInput (this=0xb28d208) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/slave.cpp:348
#44 0xb547a703 in KIO::Slave::qt_metacall (this=0xb28d208, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfd65e9c)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kio/slave.moc:82
#45 0xb6e4455c in QMetaObject::metacall (object=0xb28d208, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfd65e9c) at kernel/qmetaobject.cpp:237
#46 0xb6e553d7 in QMetaObject::activate (sender=0xb1daa18, m=0xb5559160, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3280
#47 0xb53a2c47 in KIO::Connection::readyRead (this=0xb1daa18) at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kio/connection.moc:92
#48 0xb53a346e in KIO::ConnectionPrivate::dequeue (this=0xb1d8ed8) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kio/kio/connection.cpp:82
#49 0xb53a3526 in KIO::Connection::qt_metacall (this=0xb1daa18, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xa178740)
    at /home/phil/buildroot/desktop-testing/kdelibs/src/build/kio/connection.moc:79
#50 0xb6e4455c in QMetaObject::metacall (object=0xb1daa18, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xa178740) at kernel/qmetaobject.cpp:237
#51 0xb6e4f836 in QMetaCallEvent::placeMetaCall (this=0xa4acd88, object=0xb1daa18) at kernel/qobject.cpp:534
#52 0xb6e54e6f in QObject::event (this=0xb1daa18, e=0xa4acd88) at kernel/qobject.cpp:1219
#53 0xb62abb01 in QApplicationPrivate::notify_helper (this=0x9018f48, receiver=0xb1daa18, e=0xa4acd88) at kernel/qapplication.cpp:4397
#54 0xb62b0fc3 in QApplication::notify (this=0xbfd66930, receiver=0xb1daa18, e=0xa4acd88) at kernel/qapplication.cpp:4278
#55 0xb751426a in KApplication::notify (this=0xbfd66930, receiver=0xb1daa18, event=0xa4acd88) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kdeui/kernel/kapplication.cpp:311
#56 0xb6e3d50b in QCoreApplication::notifyInternal (this=0xbfd66930, receiver=0xb1daa18, event=0xa4acd88) at kernel/qcoreapplication.cpp:732
#57 0xb6e419a7 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x8f54f38) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#58 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8f54f38) at kernel/qcoreapplication.cpp:1373
#59 0xb6e41bed in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#60 0xb6e6e234 in QCoreApplication::sendPostedEvents (s=0x901e918) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#61 postEventSourceDispatch (s=0x901e918) at kernel/qeventdispatcher_glib.cpp:277
#62 0xb5ad1b72 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#63 0xb5ad2350 in ?? () from /usr/lib/libglib-2.0.so.0
#64 0xb5ad2604 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#65 0xb6e6e3ac in QEventDispatcherGlib::processEvents (this=0x8ff6b58, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#66 0xb636a5c5 in QGuiEventDispatcherGlib::processEvents (this=0x8ff6b58, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#67 0xb6e3beb9 in QEventLoop::processEvents (this=0xbfd66764, flags=...) at kernel/qeventloop.cpp:149
#68 0xb6e3c15a in QEventLoop::exec (this=0xbfd66764, flags=...) at kernel/qeventloop.cpp:201
#69 0xb6e41caf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#70 0xb62a9947 in QApplication::exec () at kernel/qapplication.cpp:3673
#71 0xb0db3d05 in kdemain (argc=2, argv=0x90040e0) at /home/phil/buildroot/desktop-testing/kdebase/src/kdebase-4.5.80/apps/konqueror/src/konqmain.cpp:219
#72 0x0804df99 in launch (argc=2, _name=0x90020fc "/usr/bin/konqueror", args=<value optimized out>, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x9002120 "hirager-2;1291157213;128043;3332_TIME14999595") at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kinit/kinit.cpp:730
#73 0x0804ea72 in handle_launcher_request (sock=8, who=<value optimized out>) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kinit/kinit.cpp:1222
#74 0x0804f04f in handle_requests (waitForPid=0) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kinit/kinit.cpp:1415
#75 0x0804fde1 in main (argc=192013260, argv=0xb71e394, envp=0xa5c3900) at /home/phil/buildroot/desktop-testing/kdelibs/src/kdelibs-4.5.80/kinit/kinit.cpp:1901

Reported using DrKonqi
Comment 1 Joachim Mairböck 2010-12-06 10:01:26 UTC
Created attachment 54194 [details]
New crash information added by DrKonqi

konqueror (4.5.80 (4.6 Beta1)) on KDE Platform 4.5.80 (4.6 Beta1) using Qt 4.7.1

- What I was doing when the application crashed:
This crash also happens on http://www.loos.at/ after the language selection (German).

-- Backtrace (Reduced):
#7  deref (this=0xae2e884, other=@0xbfae372c) at ../../src/corelib/arch/qatomic_i386.h:132
#8  QString::operator= (this=0xae2e884, other=@0xbfae372c) at tools/qstring.cpp:1358
#9  0xac3b50e6 in std::transform<QList<QVariant>::const_iterator, QList<QString>::iterator, QString (*)(QVariant const&)> (__first=..., __last=..., __result=..., __unary_op=
    0xac3aa050 <variant2StringHelper(QVariant const&)>) at /usr/include/c++/4.5/bits/stl_algo.h:4688
#10 0xac3b0b25 in KJavaAppletViewerFactory::create (this=0xa66bbf8, wparent=0x50, parent=0x50, args=...) at /usr/src/debug/kdelibs-4.5.80/khtml/java/kjavaappletviewer.cpp:73
#11 0xaf42a893 in create<KParts::ReadOnlyPart> (this=0xa657578, parentWidget=0xcc38d48, parent=0xa657578, mimetype=..., serviceName=..., serviceTypes=..., params=...)
    at /usr/src/debug/kdelibs-4.5.80/kdecore/util/kpluginfactory.h:527
Comment 2 Dario Andres 2010-12-11 23:35:23 UTC
[Comment from a bug triager]
From bug 258832:
- What I was doing when the application crashed: I type fritz.nas in Dolphin,
which then called Konqueror to open it -> crash.
-> calling the same site via Konqueror directly -> no crash
Comment 3 Dario Andres 2010-12-11 23:35:42 UTC
*** Bug 258832 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2010-12-11 23:35:46 UTC
*** Bug 258847 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2010-12-12 14:49:15 UTC
[Comment from a bug triager]
From bug 258322:
- What I was doing when the application crashed:
I clicked on the video found in the caesium article of wikipedia, and this
crashed the browser.
Comment 6 Dario Andres 2010-12-12 14:49:21 UTC
*** Bug 258322 has been marked as a duplicate of this bug. ***
Comment 7 Joachim Mairböck 2010-12-16 19:52:38 UTC
It seems that this occurs on any page containing a Java applet. It just happened again to me on a different site.
Comment 8 Kevin Range 2011-01-09 00:14:47 UTC
Created attachment 55755 [details]
New crash information added by DrKonqi

konqueror (4.5.85 (4.6 Beta2)) on KDE Platform 4.5.85 (4.6 Beta2) using Qt 4.7.1

- What I was doing when the application crashed:

VIewing a site with a java applet.  It seems java and konqueror don't mix....

-- Backtrace (Reduced):
#6  0x00007f9c423e8550 in QString::operator=(QString const&) () from /usr/lib64/libQtCore.so.4
#7  0x00007f9c24b06dac in std::transform<QList<QVariant>::const_iterator, QList<QString>::iterator, QString (*)(QVariant const&)> (__first=..., __last=..., __result=..., __unary_op=0x7f9c24afcbf0 <variant2StringHelper(QVariant const&)>) at /usr/include/c++/4.5/bits/stl_algo.h:4688
#8  0x00007f9c24b02dc2 in KJavaAppletViewerFactory::create (this=<value optimized out>, wparent=0xcf24c0, parent=0xcf3210, args=...) at /usr/src/debug/kdelibs-4.5.85/khtml/java/kjavaappletviewer.cpp:73
#9  0x00007f9c2b5c691f in create<KParts::ReadOnlyPart> (this=<value optimized out>, parentWidget=0xcf24c0, parent=0xcf3210, mimetype=<value optimized out>, serviceName=..., serviceTypes=..., params=...) at /usr/src/debug/kdelibs-4.5.85/kdecore/util/kpluginfactory.h:527
#10 KHTMLPart::createPart (this=<value optimized out>, parentWidget=0xcf24c0, parent=0xcf3210, mimetype=<value optimized out>, serviceName=..., serviceTypes=..., params=...) at /usr/src/debug/kdelibs-4.5.85/khtml/khtml_part.cpp:4623
Comment 9 Maksim Orlovich 2011-01-09 15:40:44 UTC
Ouch. Likely due to r1192892.
Comment 10 Leo 2011-01-15 12:18:11 UTC
Created attachment 56043 [details]
New crash information added by DrKonqi

konqueror (4.5.95 (4.6 RC2)) on KDE Platform 4.5.95 (4.6 RC2) using Qt 4.7.0

- What I was doing when the application crashed:

I was opening the following site http://keepvid.com/?url=http%3A%2F%2Fvimeo.com%2F18198106

-- Backtrace (Reduced):
#6  deref (this=0x27874a8, other=...) at ../../include/QtCore/../../src/corelib/arch/qatomic_x86_64.h:133
#7  QString::operator= (this=0x27874a8, other=...) at tools/qstring.cpp:1324
#8  0x00007fed88c12e33 in transform<QList<QVariant>::const_iterator, QList<QString>::iterator, QString (*)(QVariant const&)> (this=<value optimized out>, wparent=<value optimized out>, parent=0x2891700, args=<value optimized out>) at /usr/include/c++/4.4/bits/stl_algo.h:4703
#9  KJavaAppletViewerFactory::create (this=<value optimized out>, wparent=<value optimized out>, parent=0x2891700, args=<value optimized out>) at ../../../khtml/java/kjavaappletviewer.cpp:73
#10 0x00007fed91b1b127 in create<KParts::ReadOnlyPart> (this=<value optimized out>, parentWidget=<value optimized out>, parent=<value optimized out>, mimetype=<value optimized out>, serviceName=<value optimized out>, serviceTypes=<value optimized out>, params=...) at ../../kdecore/util/kpluginfactory.h:527
Comment 11 Pino Toscano 2011-01-16 00:37:22 UTC
*** Bug 263264 has been marked as a duplicate of this bug. ***
Comment 12 Maksim Orlovich 2011-01-19 00:50:16 UTC
SVN commit 1215531 by orlovich:

Unbreak KJavaAppletViewer. QStringList::begin is not an output iterator.

CCMAIL: ervin@kde.org
BUG: 258452


 M  +2 -6      kjavaappletviewer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215531
Comment 13 Maksim Orlovich 2011-01-19 00:51:00 UTC
SVN commit 1215532 by orlovich:

Merged revision:r1215531 | orlovich | 2011-01-18 18:48:59 -0500 (Tue, 18 Jan 2011) | 5 lines

Unbreak KJavaAppletViewer. QStringList::begin is not an output iterator.

CCMAIL: ervin@kde.org
BUG: 258452

 M  +2 -6      kjavaappletviewer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215532