Merged revision:r1215531 | orlovich | 2011-01-18 18:48:59 -0500 (Tue, 18 Jan 2011) | 5 lines

Unbreak KJavaAppletViewer. QStringList::begin is not an output iterator.

CCMAIL: ervin@kde.org
BUG: 258452

svn path=/branches/KDE/4.6/kdelibs/; revision=1215532